# min-llm

./: .gitignore  README.md  config.py  decoding.py  layers.py  pyproject.toml  tokenize_dataset.py  train.py  utils.py
min_llm/: __init__.py  config.py  data.py  decoding.py  layers.py  scheduler.py  tokenize_dataset.py  train.py  utils.py
min_llm/models/: causal_llm.py  distilbert.py
models/: causal_llm.py
notebooks/: Decode TinyStories.ipynb
scripts/: train_tinystories.py
tests/: common.py  conftest.py  test_blocks.py  test_data.py  test_functional.py  test_layers.py
