[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "min-llm"
version = "0.1.0"
description = "A minimal toolbox for pretraining transformer-based LLMs from scratch"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "numpy>=1.20.0",
    "einops>=0.6.0",
    "wandb>=0.12.0",
    "datasets>=4.0.0",
    "tqdm>=4.60.0",
    "PyYAML>=6.0.0",
    "matplotlib>=3.5.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "seaborn>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["min_llm*"]
exclude = ["tests*"]